# libmodplug

./: CMakeLists.txt
src/: Makefile.os2  Makefile.vs6  load_abc.cpp  load_mod.cpp  load_pat.cpp  load_s3m.cpp  sndfile.cpp
src/libmodplug/: sndfile.h  stdafx.h
